--- a/templates/default.html
+++ b/templates/default.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="img/favicon.png">
 <title>{TITULO}</title>
 <link href="jqueryui/css/ui-lightness/jquery-ui-1.8.20.custom.css" rel="stylesheet">
 <link href="css/bootstrap.css" rel="stylesheet">
