--- a/templates/bilhete.html
+++ b/templates/bilhete.html
@@ -1,23 +1,158 @@
 <div class="container">
+  
+  <!-- BEGIN COMPRA_VALIDA -->
   <div class="py-5 text-center">
-        <h2>Vendas - Obra de Maria DF</h2>
-    <p class="lead">Parabéns você comprou o pacote</p>
-  </div>
-<!-- BEGIN COMPRA_VALIDA -->
-    <div class="row">
-      <div class="col-md-12">
-        <h3>Sua identificação de compra é <span class="badge badge-primary">{CHARGE_ID}</span></h3>
-         
-        </div>
+    <h2>Vendas - Obra de Maria DF</h2>
+  <p class="lead"><h4>Parabéns</h4>
+    Reserva realizada com sucesso!</p>
     </div>
   <div class="row">
-    <div class="col-md-12">
-    <hr class="mb-4">
-    <a class="btn btn-primary btn-lg btn-block" href="{URLGN}" target="_blank" >Continue para o pagamento</a>
-  </div>
-  </div>
+    <div class="col-md-6 order-md-2 mb-4">
+      <h4 class="d-flex justify-content-between align-items-center mb-3">
+        <span >Pagamento</span>
+        
+        
+        
+      </h4>
+      <ul class="list-group mb-3">
+        <li class="list-group-item d-flex justify-content-between lh-condensed">        
+          <div>
+            <h6 class="my-0 text-muted" >STATUS</h6>            
+          </div>
+          <span class="badge badge-warning">EM ABERTO</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">        
+          <div>
+            <h6 class="my-0 text-muted" >{GRUPO_NOME}</h6>            
+          </div>
+          <span class="text-muted">{GRUPO_VALOR_CURRENCY}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0 text-muted" >Adesão</h6>
+            
+          </div>
+          <span class="text-muted">{GRUPO_VALOR_ADESAO_CURRENCY}</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0 text-muted" >Taxa de Embarque</h6>            
+          </div>
+          <span class="text-muted">{GRUPO_VALOR_EMBARQUE_CURRENCY}</span>
+        </li>
+        <!-- BEGIN BLOCK_OPCIONAL -->
+        <li class="list-group-item d-flex justify-content-between lh-condensed">          
+          <div>
+            <div class="custom-control custom-checkbox">
+              <input type="checkbox" value="1" name="opcional" class="custom-control-input" id="opcional" >
+              <label class="custom-control-label text-muted" for="opcional">{GRUPO_OPCIONAL_NOME}</label>
+            </div>           
+          </div>
+          <span class="text-muted">{GRUPO_OPCIONAL_VALOR_CURRENCY}</span>
+        </li>
+        <!-- END BLOCK_OPCIONAL --> 
+        <li class="list-group-item d-flex justify-content-between lh-condensed">    
+        <div>
+          <h6 class="my-0 text-muted" >Quantidade</h6>            
+        </div>
+        <span class="text-muted">{QUANTIDADE}</span>
+        </li>
+      </li>       
+        <li class="list-group-item d-flex justify-content-between">
+          <span class="text-muted">Total ({GRUPO_MOEDA})</span>
+          <strong class="text-muted" id="lbl_total">0,00</strong>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <span class="text-muted">Dollar</span>
+          <strong class="text-muted" id="lbl_total">0,00</strong>
+        </li>
+      </ul>
+      <hr class="mb-4">
+      <h4 class="mb-3">Formas de Pagamento</h4>
+      <div class="d-block my-3">        
+        <h5>{FORMA}</h5>
+      </div>
+      <hr class="mb-4">
+      <h4 class="mb-3">Tipo de Pagamento</h4>
+      <div class="d-block my-3">
+        <!--  BEGIN BLOCK_AVISTA -->   
+              <!--  BEGIN BLOCK_TRANSFERENCIA_AVISTA -->  
+              <h6>Transferência bancária</h6>  
+              {INFO_TRANSFERENCIA}
+              <!--  END BLOCK_TRANSFERENCIA_AVISTA -->  
+
+
+              <!--  BEGIN BLOCK_CHEQUE_AVISTA --> 
+              <h6>Cheque</h6>  
+              {INFO_CHEQUE}              
+              <!--  END BLOCK_CHEQUE_AVISTA --> 
+
+
+              <!--  BEGIN BLOCK_BOLETO_AVISTA --> 
+              <h6>Boleto</h6>       
+                <a class="btn btn-primary btn-lg btn-block" href="{URLGN_BOLETO}" target="_blank" >IMPRIMIR BOLETO</a>
+              <!-- END BLOCK_BOLETO_AVISTA --> 
+                      
+        <!--  END BLOCK_AVISTA --> 
+
+
+
+        <!--  BEGIN BLOCK_ENTRADA -->   
+            <!--  BEGIN BLOCK_BOLETO_ENTRADA --> 
+            <h6>Entrada de 20% no Boleto</h6>     
+            <a class="btn btn-primary btn-lg btn-block" href="{URLGN_BOLETO}" target="_blank" >IMPRIMIR BOLETO</a>
+            <!--  END BLOCK_BOLETO_ENTRADA -->  
+            <!--  BEGIN BLOCK_CHEQUE_ENTRADA -->  
+            <h6>Entrada de 20% em cheque</h6>     
+            {INFO_CHEQUE} 
+            <!--  END BLOCK_CHEQUE_ENTRADA --> 
+            <!--  BEGIN BLOCK_TRANSFERENCIA_ENTRADA -->  
+            <h6>Entrada de 20% transferência bancária</h6>     
+            {INFO_TRANSFERENCIA}
+            <!--  END BLOCK_TRANSFERENCIA_ENTRADA -->
+            
+            
+            <!--  BEGIN BLOCK_CARTAO_ENTRADA_RESTO -->
+            <h6>Restante no cartão de crédito</h6>
+            <a class="btn btn-primary btn-lg btn-block" href="{URLGN_CARTAO}" target="_blank" >PAGAR COM CARTÃO</a>
+            <!--  END BLOCK_CARTAO_ENTRADA_RESTO --> 
+            
+            <!--  BEGIN BLOCK_CHEQUE_ENTRADA_RESTO -->
+            <h6>Restante em cheques</h6>
+            {INFO_CHEQUE} 
+            <!--  END BLOCK_CHEQUE_ENTRADA_RESTO --> 
+            
+        <!--  END BLOCK_ENTRADA -->
+
+
+
+        <!--  BEGIN BLOCK_PARCELADO -->   
+        <h6>Parcelamento no cheque</h6>  
+        {INFO_CHEQUE}        
+        <!--  END BLOCK_PARCELADO -->
+      </div>      
+      <ul class="list-group m-3">
+        <li class="list-group-item d-flex justify-content-between">
+          <span class="text-muted">Total Final R$</span>
+          <strong class="text-muted" id="lbl_total_real">0,00</strong>
+        </li>
+      </ul>
+        
+     
+    
+    </div>
+    <div class="col-md-6 order-md-1">
+      <h4 class="mb-3">Minha Reserva <span class="badge badge-primary">{CHARGE_ID}</span></h4>
+    </div>
+    </div>
+    
+   
 <!-- END COMPRA_VALIDA -->
 <!--BEGIN COMPRA_INVALIDA -->
-COMPRA NAO ENCONTRADA 
+<div class="py-5 text-center">
+  <h2>Vendas - Obra de Maria DF</h2>
+<p class="lead"><h4>Desculpe!</h4>
+  Reserva não encontrada</p>
+  </div>
 <!-- END COMPRA_INVALIDA -->
   </div>
