--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -63,15 +63,15 @@
       <h4 class="mb-3">Formas de Pagamento</h4>
       <div class="d-block my-3">
         <div class="custom-control custom-radio">
-          <input value="credit_card" id="formaAVista" name="forma" type="radio" class="custom-control-input" checked="" required="">
+          <input value="formaAVista" id="formaAVista" name="forma" type="radio" class="custom-control-input" checked="" required="">
           <label class="custom-control-label" for="formaAVista">A Vista (5% de Desconto) <span class="badge badge-success">Dollar: {COTACAO_CURRENCY}</span></label>
         </div>
         <div class="custom-control custom-radio">
-          <input value="banking_billet" id="formaEntrada" name="forma" type="radio" class="custom-control-input" required="">
+          <input value="formaEntrada" id="formaEntrada" name="forma" type="radio" class="custom-control-input" required="">
           <label class="custom-control-label" for="formaEntrada">Entrada + Parcelado no Cartão em até 12X <span class="badge badge-success">Dollar: {COTACAO_ENTRADA_CURRENCY}</span></label>
         </div>
         <div class="custom-control custom-radio">
-          <input value="banking_billet" id="formaParcelado" name="forma" type="radio" class="custom-control-input" required="">
+          <input value="formaParcelado" id="formaParcelado" name="forma" type="radio" class="custom-control-input" required="">
           <label class="custom-control-label" for="formaParcelado">Parcelado no cheque em {PARCELAMAXIMA} vezes <span class="badge badge-success">Dollar: {COTACAO_PARCELADO_CURRENCY}</span></label>
         </div>
       </div>
@@ -86,9 +86,14 @@
           <label class="custom-control-label" for="transferenciaAVista">Transferência Bancária</label>
         </div>
         <div class="custom-control custom-radio">
-          <input value="banking_billet" id="boletoAVista" name="pagamentoAVista" type="radio" class="custom-control-input" required="">
+          <input value="boleto" id="boletoAVista" name="pagamentoAVista" type="radio" class="custom-control-input" required="">
           <label class="custom-control-label" for="boletoAVista">Boleto (GerenciaNet)</label>
         </div>
+        <div class="custom-control custom-radio">
+          <input value="cheque" id="chequeAVista" name="pagamentoAVista" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="chequeAVista" id="chequeAVistaLabel">Cheque</label>
+        </div> 
+        
       </div>
     </div>
     
@@ -100,13 +105,17 @@
           <label class="custom-control-label" for="entradatransferenciaEntrada">Transferência Bancária</label>
         </div>
         <div class="custom-control custom-radio">
-          <input value="banking_billet" id="entradaBoletoEntrada" name="entradaPagamentoEntrada" type="radio" class="custom-control-input" required="">
+          <input value="boleto" id="entradaBoletoEntrada" name="entradaPagamentoEntrada" type="radio" class="custom-control-input" required="">
           <label class="custom-control-label" for="entradaBoletoEntrada">Boleto (GerenciaNet)</label>
         </div>
+        <div class="custom-control custom-radio">
+          <input value="cheque" id="entradachequeEntrada" name="entradaPagamentoEntrada" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="entradachequeEntrada" id="entradachequeEntradaLabel">Cheque</label>
+        </div> 
       </div>
       <h5 class="mb-3">Parcelamento: <span id="valor80" class="badge badge-success"></span></h5>
       <div class="custom-control custom-radio">
-        <input value="credit_card" id="creditoEntrada" name="pagamentoEntrada" checked type="radio" class="custom-control-input" checked="" required="">
+        <input value="credit_card" id="creditoEntrada" name="pagamentoEntrada" checked type="radio" class="custom-control-input" required="">
         <label class="custom-control-label" for="creditoEntrada" id="creditoEntradaLabel">Cartão de crédito (GerenciaNet até 12 vezes com juros)</label>
       </div>
       <div class="custom-control custom-radio">
@@ -349,7 +358,7 @@
           <label class="custom-control-label" for="mailmarketing">Receber emails da Obra de Maria DF</label>
         </div>
         <div class="custom-control custom-checkbox">
-          <input value="1" type="checkbox" class="custom-control-input" id="termos" name="termos" required>
+          <input value="1" checked="checked" type="checkbox" class="custom-control-input" id="termos" name="termos" required>
           <label class="custom-control-label" for="termos">Li o contrato e aceito os termos</label>
           <div class="invalid-feedback label-error">
             Por favor aceite os termos.
@@ -556,15 +565,18 @@ function blockAcomp(numero,disabled){
             //funcao de sucesso
             var funcSuccess = function(data) {
             if(data.code == 200){
+              console.log(data);
               window.location.href="bilhete.php?charge_id="+data.data.charge_id;
             
             }else{
-              alert("Erro encontrado\n"+data.data.mensagem);
+              showMessage("Erro", data.data.mensagem);
+              //alert("Erro encontrado\n"+data.data.mensagem);
             }
             }
             //funcao de erro
             var funcDefaultError = function(erro) {
-            console.log(erro.status + '-' + erro.responseText);
+              showMessage();
+            //console.log(erro.status + '-' + erro.responseText);
             }
             postJson('ajax/shopping/checkout.php',form,funcSuccess,funcDefaultError);
            
@@ -633,7 +645,18 @@ function blockAcomp(numero,disabled){
         });
         $("#cpf").change(function(){
 
-          var funcSuccess = function(data) {
+          buscaPeloCpf();      
+        });
+       
+       
+
+        atualizaTela();
+        $("#cpf").val("00007311966");
+        buscaPeloCpf();
+      });
+
+      function buscaPeloCpf(){
+        var funcSuccess = function(data) {
             console.log(data.code);
               if(data.code == 200){
                 preencheForm(data.data);
@@ -641,17 +664,10 @@ function blockAcomp(numero,disabled){
             }
             //funcao de erro
             var funcDefaultError = function(erro) {
-            console.log(erro.status + '-' + erro.responseText);
+              
+            //console.log(erro.status + '-' + erro.responseText);
             }
             postJson('ajax/shopping/clienteByCpf.php',{"cpf":$("#cpf").val()},funcSuccess,funcDefaultError);
 
-      
-        });
-       
-       
-
-        atualizaTela();
-      });
-
-
+      }
     </script>
