ajustes na tela de checkout

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -358,7 +358,7 @@
           <label class="custom-control-label" for="mailmarketing">Receber emails da Obra de Maria DF</label>
         </div>
         <div class="custom-control custom-checkbox">
-          <input value="1" checked="checked" type="checkbox" class="custom-control-input" id="termos" name="termos" required>
+          <input value="1"  type="checkbox" class="custom-control-input" id="termos" name="termos" required>
           <label class="custom-control-label" for="termos">Li o contrato e aceito os termos</label>
           <div class="invalid-feedback label-error">
             Por favor aceite os termos.
@@ -651,8 +651,7 @@ function blockAcomp(numero,disabled){
        
 
         atualizaTela();
-        $("#cpf").val("00007311966");
-        buscaPeloCpf();
+
       });
 
       function buscaPeloCpf(){
