--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -338,7 +338,7 @@
               <!-- END BLOCK_ESTADO -->
             </select>
             <div class="invalid-feedback label-error">
-             Por favor selecione um estrado.
+             Por favor selecione um estado.
             </div>
           </div>
           <div class="col-md-6 mb-3">
@@ -347,7 +347,7 @@
               <option value="">Selecione...</option>
           </select>
             <div class="invalid-feedback label-error">
-              Por favor selecione um país.
+              Por favor selecione uma cidade.
             </div>
           </div>        
           
