ajustes no admin

--- a/templates/grupos.andamento.html
+++ b/templates/grupos.andamento.html
@@ -28,7 +28,7 @@ $(document).ready(function(){
             <th width="80">Data Chegada</th>
 			<th width="100">Status</th>
 		 	<th width="20">Qtd.</th>
-            <th width="220">Opções</th>
+            <th width="260">Opções</th>
           </tr>
         </thead>
         <tbody>
@@ -47,6 +47,7 @@ $(document).ready(function(){
 		  <a href="{LINK_ROTEIRO}" class="btn" title="Baixar Roteiro" target="_blank"><i class="icon-file"></i></a> 
 		  <a href="{LINK_PAUTA}" class="btn" title="Baixar Pauta de Reunião" target="_blank"><i class="icon-list-alt"></i></a>
           <a href="{MODELO_FICHA}?idGrupo={ID_HASH}" class="btn" title="Ficha de Inscrição" target="_blank"><i class="icon-book"></i></a> 		  
+          <a href="web.lista.php?idGrupo={ID_HASH}" class="btn btn-primary" title="Compras pela internet" ><i class="icon-shopping-cart icon-white"></i></a> 		  
         </div>
 			</td>
           </tr>
