--- a/templates/bilhete.html
+++ b/templates/bilhete.html
@@ -7,7 +7,7 @@
     Reserva realizada com sucesso!</p>
     </div>
   <div class="row">
-    <div class="col-md-6 order-md-2 mb-4">
+    <div class="col-md-4 order-md-2 mb-4">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span >Pagamento</span>
         
@@ -21,22 +21,23 @@
           </div>
           <span class="badge badge-warning">EM ABERTO</span>
         </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">        
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0 text-muted" >{GRUPO_NOME}</h6>            
+            <h6 class="my-0 text-muted" >Pacote ({GRUPO_MOEDA})</h6>
+            
           </div>
-          <span class="text-muted">{GRUPO_VALOR_CURRENCY}</span>
+          <span class="text-muted">{GRUPO_VALOR_PACOTE_CURRENCY}</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0 text-muted" >Adesão</h6>
+            <h6 class="my-0 text-muted" >Adesão ({GRUPO_MOEDA})</h6>
             
           </div>
           <span class="text-muted">{GRUPO_VALOR_ADESAO_CURRENCY}</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0 text-muted" >Taxa de Embarque</h6>            
+            <h6 class="my-0 text-muted" >Taxa de Embarque ({GRUPO_MOEDA})</h6>            
           </div>
           <span class="text-muted">{GRUPO_VALOR_EMBARQUE_CURRENCY}</span>
         </li>
@@ -44,27 +45,29 @@
         <li class="list-group-item d-flex justify-content-between lh-condensed">          
           <div>
             <div class="custom-control custom-checkbox">
-              <input type="checkbox" value="1" name="opcional" class="custom-control-input" id="opcional" >
-              <label class="custom-control-label text-muted" for="opcional">{GRUPO_OPCIONAL_NOME}</label>
+              <label class="custom-control-label text-muted" for="opcional">Opcional</label>
             </div>           
           </div>
           <span class="text-muted">{GRUPO_OPCIONAL_VALOR_CURRENCY}</span>
         </li>
         <!-- END BLOCK_OPCIONAL --> 
-        <li class="list-group-item d-flex justify-content-between lh-condensed">    
-        <div>
-          <h6 class="my-0 text-muted" >Quantidade</h6>            
-        </div>
-        <span class="text-muted">{QUANTIDADE}</span>
-        </li>
+        
       </li>       
         <li class="list-group-item d-flex justify-content-between">
           <span class="text-muted">Total ({GRUPO_MOEDA})</span>
-          <strong class="text-muted" id="lbl_total">0,00</strong>
+          <strong class="text-muted" id="lbl_total">{TOTAL_DOLLAR}</strong>
         </li>
         <li class="list-group-item d-flex justify-content-between">
-          <span class="text-muted">Dollar</span>
-          <strong class="text-muted" id="lbl_total">0,00</strong>
+          <span class="text-muted">Dollar (R$)</span>
+          <strong class="text-muted" id="lbl_total"> {COTACAO}</strong>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <span class="text-muted">Desconto(R$)</span>
+          <strong class="text-muted" id="lbl_total_real">{DESCONTO}</strong>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <span class="text-muted">Total Final(R$)</span>
+          <strong class="text-muted" id="lbl_total_real">R$ {VALOR_TOTAL}</strong>
         </li>
       </ul>
       <hr class="mb-4">
@@ -131,18 +134,45 @@
         {INFO_CHEQUE}        
         <!--  END BLOCK_PARCELADO -->
       </div>      
-      <ul class="list-group m-3">
-        <li class="list-group-item d-flex justify-content-between">
-          <span class="text-muted">Total Final R$</span>
-          <strong class="text-muted" id="lbl_total_real">0,00</strong>
-        </li>
-      </ul>
-        
+         
      
     
     </div>
-    <div class="col-md-6 order-md-1">
+    <div class="col-md-8 order-md-1">
       <h4 class="mb-3">Minha Reserva <span class="badge badge-primary">{CHARGE_ID}</span></h4>
+
+      <ul class="list-group mb-3">
+
+      <li class="list-group-item ">        
+        <div>
+          <label class="text-muted">Pacote:</label>
+          <h6 class="my-0 text-muted" >{GRUPO_NOME}</h6>            
+        </div>        
+      </li>
+      <!-- BEGIN BLOCK_OPCIONAL_NOME -->
+      <li class="list-group-item ">        
+        <div>
+          <label class="text-muted">Opcional:</label>
+          <h6 class="my-0 text-muted" >{GRUPO_OPCIONAL_NOME}</h6>            
+        </div>        
+      </li>
+      <!-- END BLOCK_OPCIONAL_NOME -->
+      <li class="list-group-item ">        
+        <div>
+          <label class="text-muted">Data de Embarque:</label>
+          <h6 class="my-0 text-muted" >{DATA_EMBARQUE}</h6>            
+        </div>        
+      </li>
+      <li class="list-group-item ">        
+        <div>
+          <label class="text-muted">Participantes ({QUANTIDADE}):</label>
+          <!-- BEGIN BLOCK_PARTICIPANTE -->
+          <h6 class="my-0 text-muted" >{NOME_PARTICIPANTE}</h6>            
+          <!-- END BLOCK_PARTICIPANTE -->            
+        </div>        
+      </li>
+      
+        </ul>
     </div>
     </div>
     
