--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,13 @@ $(document).ready(function(){
 	
 		
 	$('.paginar').click(function(){
-		jQuery.ajax({
+		pesquisar();
+	});
+});
+function pesquisar(){
+  jQuery.ajax({
 		type: "GET",
-		url: "grupos.andamento.php?pesquisa="+$("#pesquisa").val()+"&ajax=1&pagina="+$('#manipulacao').val(),
+		url: "home.php?pesquisa="+$("#pesquisa").val()+"&ajax=1&pagina="+$('#manipulacao').val(),
 		beforeSend: function( ) {
 		jQuery('#content').html('<p align="center">Processando...<br /><img src="img/ajax_loading_pequeno.gif" /></p>');
 		  },
@@ -14,9 +18,7 @@ $(document).ready(function(){
 		jQuery("#content").html(msg);
 		}
 		});
-	});
-});
-
+}
 </script>
 <section>
 <h1>Grupos em Andamento<br/><small>Lista dos grupos em andamento.</small></h1>
@@ -62,7 +64,8 @@ $(document).ready(function(){
     <a href="#" class="paginar" onclick="document.getElementById('manipulacao').value = '{PAGINA_ANTERIOR}';">&larr; Anterior</a>
     </li>
     <li class="form-search">
-        <input type="text" class="input-medium search-query" id="pesquisa" name="pesquisa" value="{PESQUISA}"/>
+      <input type="number" class="input-medium" id="muda" name="muda" value="{PAGINA}" onchange="document.getElementById('manipulacao').value = this.value; pesquisar();"/>  
+      <input type="text" class="input-medium search-query" id="pesquisa" name="pesquisa" value="{PESQUISA}"/>
         <button class="btn-default paginar" type="button"><i class="icon-search"></i>Procurar</button>
         	
     	</li>
